# zakura-tui

./: .gitignore  README.md  pyproject.toml
config/: zakura-tui.example.toml
docs/superpowers/plans/: 2026-07-20-installer-path-guidance.md
docs/superpowers/specs/: 2026-07-20-installer-path-guidance-design.md
scripts/: install-local.sh
src/zakura_tui/: __init__.py  application.py  cli.py  config.py  demo.py  generated_brand.py  log_parser.py  model.py  monitor.py  probes.py  renderer.py  service_control.py  terminal.py
tests/: test_brand_generator.py  test_cli.py  test_config.py  test_install_assets.py  test_log_parser.py  test_model.py  test_monitor.py  test_monitor_integration.py  test_package.py  test_probes.py  test_renderer.py  test_renderer_goldens.py  test_service_control.py  test_terminal_session.py
tests/golden/: degraded-140.txt  ready-100.txt  starting-40.txt  syncing-79.txt  syncing-80.txt
tools/: render_brand.py  update_goldens.py
